# proximity-search

./: .dockerignore  .env.template  .gitignore  GDAL-3.4.1-cp310-cp310-linux_x86_64.whl  LICENSE  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
docker/: web.Dockerfile
docker/dockerfiles/: Dockerfile
docker/dockerfiles/backend/: Dockerfile  backup.Dockerfile
docker/dockerfiles/frontend/: Dockerfile
docker/entrypoints/: postgis.sh  setup-postgis.sh
nginx/: nginx.conf
proximity_apps/core/: apps.py  exceptions.py  models.py  routers.py  serializers.py  signals.py  urls.py  views.py
proximity_apps/core/migrations/: 0001_initial.py
proximity_apps/fixtures/: fixture.json
proximity_apps/search/: apps.py  models.py  permissions.py  urls.py  views.py
proximity_apps/search/migrations/: 0001_initial.py
proximity_search/: asgi.py  settings.py  urls.py  wsgi.py
web_ui/proximity_web/: package.json
web_ui/proximity_web/src/: App.jsx  Search.jsx  SearchWrapper.jsx
