[tool.poetry]
name = "proximity-search-tool"
version = "0.1.0"
description = "Dead-simple web-based proximity search tool to discover Facebook Groups that you love"
authors = ["50-Course <eridotdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = ">=4.2"
djangorestframework = ">=3.12.4"
djangorestframework-api-key = "3.0.0"
djangorestframework-simplejwt = ">=4.6.0"
django-cors-headers = ">=3.7.0"
networkx = "3.2.1"
psycopg = {version = "3.1.18", extras = ["binary", "pool"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
